--- a/client-iqair.html
+++ b/client-iqair.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Live AQI Monitor - IQAir</title>
+      <link rel="icon" href="/your-icon.png" />
     <style>
         * {
             margin: 0;
