gitAdd user authentication feature Implemented login and registration forms with JWT token authentication. Updated user model and created new API endpoints. Lines starting

--- a/index.html
+++ b/index.html
@@ -193,6 +193,14 @@
 <body>
     <div class="container">
         <div class="header">
+            In public/index.html, add this somewhere in the header (top-right is nice):
+
+<a href="/about.html" style="font-size:14px; color:#667eea; font-weight:600;">
+  About
+</a>
+
+
+Now users can navigate naturally.
             <h1>🌍 Live AQI Monitor</h1>
             <div class="subtitle">Powered by IQAir - Real-time air quality data worldwide</div>
             
