--- a/public/about.html
+++ b/public/about.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+  <img
+  src="/images/logo.png"
+  alt="Live AQI Monitor logo"
+  style="height:48px; margin-bottom:12px;"
+/>
+
+  <link rel="icon" type="image/png" href="/images/logo.png" />
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About – Live AQI Monitor</title>
