--- a/public/about.html
+++ b/public/about.html
@@ -17,6 +17,45 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About – Live AQI Monitor</title>
   <style>
+    .navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: white;
+  padding: 14px 20px;
+  border-radius: 12px;
+  margin-bottom: 20px;
+  box-shadow: 0 4px 16px rgba(0,0,0,0.08);
+}
+
+.nav-left {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.nav-logo {
+  height: 32px;
+}
+
+.nav-title {
+  font-weight: 700;
+  font-size: 16px;
+  color: #2d3748;
+}
+
+.nav-links a {
+  margin-left: 16px;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 14px;
+  color: #667eea;
+}
+
+.nav-links a:hover {
+  text-decoration: underline;
+}
+
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
       background: linear-gradient(135deg, #667eea, #764ba2);
