gitAdd user authentication feature Implemented login and registration forms with JWT token authentication. Updated user model and created new API endpoints. Lines starting

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
 <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon-180x180.png">
+<link rel="manifest" href="/manifest.json">
+<meta name="theme-color" content="#667eea">
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -587,5 +589,12 @@ function showError(error) {
                 `Last updated: ${now.toLocaleTimeString()}`;
         }
     </script>
+    <script>
+  if ("serviceWorker" in navigator) {
+    navigator.serviceWorker.register("/sw.js")
+      .then(() => console.log("Service Worker registered"))
+      .catch(err => console.log("SW registration failed", err));
+  }
+</script>
 </body>
 </html>
