gitAdd user authentication feature Implemented login and registration forms with JWT token authentication. Updated user model and created new API endpoints. Lines starting

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
     </div>
 
     <script>
-    const API_URL = 'https://aqi-api-iqair-production.up.railway.app';
+    const API_URL = 'https://api.yourdomain.com/api/aqi/countries"';
     let userLat, userLon;
 
         // Get current location
