--- a/public/about.html
+++ b/public/about.html
@@ -1,61 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
-  <img
-  src="/images/logo.png"
-  alt="Live AQI Monitor logo"
-  style="height:48px; margin-bottom:12px;"
-/>
-
-  <link rel="icon" type="image/png" href="/images/logo.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
-<link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon-180x180.png">
-
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About – Live AQI Monitor</title>
+  
+  <!-- Simple emoji favicon -->
+  <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>🌍</text></svg>">
+  
   <style>
-    .navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background: white;
-  padding: 14px 20px;
-  border-radius: 12px;
-  margin-bottom: 20px;
-  box-shadow: 0 4px 16px rgba(0,0,0,0.08);
-}
-
-.nav-left {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
-
-.nav-logo {
-  height: 32px;
-}
-
-.nav-title {
-  font-weight: 700;
-  font-size: 16px;
-  color: #2d3748;
-}
-
-.nav-links a {
-  margin-left: 16px;
-  text-decoration: none;
-  font-weight: 600;
-  font-size: 14px;
-  color: #667eea;
-}
-
-.nav-links a:hover {
-  text-decoration: underline;
-}
-
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
       background: linear-gradient(135deg, #667eea, #764ba2);
@@ -77,6 +30,9 @@
     h1 {
       margin-top: 0;
       font-size: 28px;
+      display: flex;
+      align-items: center;
+      gap: 12px;
     }
 
     p {
@@ -93,12 +49,23 @@
       text-decoration: none;
       color: #667eea;
       font-weight: 600;
+      font-size: 14px;
+    }
+
+    .nav a:hover {
+      text-decoration: underline;
     }
 
     .footer {
       margin-top: 30px;
+      padding-top: 20px;
+      border-top: 1px solid #e2e8f0;
       font-size: 13px;
       color: #718096;
+    }
+
+    strong {
+      color: #667eea;
     }
   </style>
 </head>
@@ -108,32 +75,41 @@
       ← <a href="/">Back to Live AQI</a>
     </div>
 
-    <h1>About Live AQI Monitor 🌍</h1>
+    <h1>🌍 About Live AQI Monitor</h1>
 
     <p>
-      Live AQI Monitor is a simple, real-time air quality application that helps
-      people understand the air they breathe — anywhere in the world.
+      Live AQI Monitor is a real-time air quality application that helps
+      you understand the air you breathe — anywhere in the world.
     </p>
 
     <p>
-      The app provides Air Quality Index (AQI) values, pollutant data, and basic
-      weather conditions using trusted global air-quality sources, including
-      <strong>:contentReference[oaicite:0]{index=0}</strong>.
+      The app provides Air Quality Index (AQI) values, pollutant data, and 
+      weather conditions using <strong>IQAir</strong>, one of the world's leading
+      air quality data platforms.
     </p>
 
     <p>
-      AQI values are presented using internationally recognised standards
-      (US AQI and China AQI), along with health guidance to help users make
-      informed decisions about outdoor activity.
+      AQI values are presented using internationally recognized standards
+      (US AQI and China AQI), along with health guidance to help you make
+      informed decisions about outdoor activities.
     </p>
 
+    <h2 style="font-size: 20px; margin-top: 24px;">What is AQI?</h2>
     <p>
-      This project was built with performance, privacy, and simplicity in mind.
-      No personal data is stored, and location access is used only to fetch
-      nearby air-quality data when explicitly allowed by the user.
+      The Air Quality Index (AQI) is a number used to communicate how polluted
+      the air is. Higher numbers mean more pollution and greater health concerns.
+    </p>
+
+    <h2 style="font-size: 20px; margin-top: 24px;">Privacy</h2>
+    <p>
+      This project was built with privacy in mind. No personal data is stored,
+      and location access is used only to fetch nearby air quality data when
+      explicitly allowed by you.
     </p>
 
     <div class="footer">
+      <strong>Data Source:</strong> <a href="https://www.iqair.com" target="_blank" style="color: #667eea;">IQAir</a><br>
+      <strong>API:</strong> <a href="https://aqi-api-iqair-production.up.railway.app/health" target="_blank" style="color: #667eea;">AQI Monitor API</a><br><br>
       © 2026 Live AQI Monitor · Built with Node.js & Express
     </div>
   </div>
